--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,25 @@
 }
 
 .h2 {
-  color: rgb(158, 52, 52);
+  color: rgb(20, 20, 20);
 }
 
-table {
-  background-color: black;
+.table th {
+  background-color: rgb(49, 46, 46);
+  border: 2px solid rgb(7, 0, 0);
+}
+
+.table td {
+  background-color: rgb(49, 46, 46);
+  border: 2px solid rgb(7, 0, 0);
+  color: rgb(0, 0, 0);
+}
+
+.table {
+  width: 50%;
+  margin: auto;
+}
+
+#root , body {
+  background-color: rgb(49, 46, 46);
 }
